app/assets/css/pages/_landing.scss
.landing-page .page-content {
  display: grid;

  grid-template-areas:
    "banner" "article" "sidebar";
  grid-template-columns: 1fr;
  grid-gap: 2rem;

  @media(min-width: $breakpoint-laptop) {
    grid-template-areas:
      "banner banner"
      "article sidebar";
    grid-template-columns: 1fr 30%;
  }
}

.page-content article.metadata-section {
  grid-area: article;
}

.landing-page .page-content section.doi-banner {
  grid-area: banner;
  background-color: var(--theme-header-bg-accent);
}

.landing-page .page-content #sidebar {
    grid-area: sidebar;
}

.sidebar-section {
    @include card();
    margin-bottom: $space-lg;
    padding: $space-lg;

  header h2 {
    font-size: var(--font-size-lg);
    margin-bottom: $space-md;
    margin-top: 0;
  }
}

.details-grid {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: $space-md;

  .metadata-item {
    display: contents;
  }
}


// Preview container
#preview-container {
  margin-bottom: $space-lg;
}

#preview-container:hover {
}

.resource-type-general {
  font-weight: bold;
}

.metadata-titles {
  h1 {
    margin: 0 0 $space-md 0;
  }

  h2 {
    margin: 0 0 $space-md 0;
  }
  margin: 0 0 $space-lg 0;
}

.metadata-value-list
{
  list-style-type: none;
  padding: 0;
  display: flex;
  margin: 0;
}

.metadata-value-list > li {
  &:after {
    content: ';\00a0';
  }
}

.metadata-value-list > li:last-child {
  &:after {
    content: '';
  }
}

.doi-banner {
  display: flex;
  align-items: center;
  gap: 1rem;
  padding: 1rem 1rem;
  background-color: var(--theme-bg-accent);

  .doi-identifier {
    margin-right: auto;
    font-size: 2rem;
    overflow-wrap: anywhere;
    word-wrap: anywhere;
    line-height: 2.2rem;
  }
}

// DOI State badges. TODO: Clean this up.
.doi-state-container {
  display: inline-flex;
  align-items: center;
  padding: .25rem .5rem;
  border-radius: 1rem;
  font-weight: 600;
  font-size: 0.9rem;
  text-transform: uppercase;
  letter-spacing: 0.5px;
}

.doi-state-icon {
  border-radius: 50%;
}

.doi-state-draft {
  background-color: #f0f0f0;
  color: #666;
}

.doi-state-draft .doi-state-icon {
  background-color: #999;
}

.doi-state-registered {
  background-color: #e6f2ff;
  color: #0066cc;
}

.doi-state-registered .doi-state-icon {
  background-color: #0066cc;
}

.doi-state-findable {
  background-color: #e6f7f0;
  color: #009966;
}

.doi-state-findable .doi-state-icon {
  background-color: #009966;
}

.doi-heading {
  display: flex;
  align-items: center;
  gap: $space-md;

  margin: 0 0 $space-sm 0;
}

/**
 * Citation box
 */
.citation-controls {
  margin-bottom: $space-sm;

  label {
    display: none;
  }
}

.citation-result {
  overflow: auto;
  margin-bottom: $space-sm;
  font-size: var(--font-size-sm);
  font-family: 'monospace';
}

.citation-text {
  margin-right: auto;
  color: var(--theme-fg-accent);
  white-space: break-spaces;
}

.citation-icon {
  color: var(--theme-fg-accent);
}

#citation-copied {
  color: green;
  opacity: 0;
  transition: opacity 0.5s ease-out;
}

#citation-copied.flash-active {
  opacity: 1;
}

.metadata-item {
  margin-bottom: 1rem;

  h4 {
    font-size: var(--font-size-base);
    font-weight: bold;
    margin: 0;
  }

  display: grid;
  column-gap: 1rem;
}

.metadata-label {
  font-weight: bold;
  margin-bottom: 0.25rem;
  color: #555;
}

.metadata-value {
  margin-bottom: 0.5rem;

  ul {
    margin: 0;
    padding: 0;
    li {
      list-style-type: none;
    }
  }
}

// On wider widths in the main panel, make metadata label and value horizontal
.metadata-section .metadata-item {
  @media(min-width: $breakpoint-tablet) {
    grid-template-columns: 15% 1fr;
  }
}

.sidebar-section .metadata-item {
  @media(min-width: $breakpoint-tablet) {
    grid-template-columns: 1fr 1fr;
  }
}

.contributors-list {
  list-style-type: none;
  padding: 0;
}

.contributor-item {
  margin-bottom: 0.5rem;
  display: flex;
  align-items: center;
}

.contributor-role {
  color: #777;
  margin-left: 0.5rem;
  font-size: 0.9rem;
}

.contributor-orcid {
  display: flex;

  img {
    height: var(--font-size-md);
    margin-left: $space-sm;
  }
}

.target a {
  font-size: 2rem;
}


.target-card {
  @include card();
  box-shadow: $box-shadow-sm;
  padding: $space-md;

  display: grid;
  grid-gap: 1rem;
  grid-template-areas: "img" "header" "description";

  .target-header {
    grid-area: header;
    font-size: var(--font-size-xl);
  }
  .target-img {
    display: flex;
    grid-area: img;
    object-fit: cover;
    justify-content: center;
    align-items: center;

    width: 100%;
    height: auto;

    img {
      width: 100%;
      height: auto;
    }
  }
  .target-description {
    grid-area: description;
    color: inherit;
    display: block;
  }

  h1, h2, h3, h4 {
    margin-top: 0;
    margin-bottom: $space-md;
  }

  h3 > a {
    color: var(--theme-fg-accent);
    text-decoration: none;
  }

  @media (min-width: $breakpoint-laptop) {
    grid-template-columns: min-content 1fr;
    grid-template-areas: "img header" "img description";

    .target-img {
      width: 20rem;
      height: 15rem;
      overflow: hidden;

      img {
        width: 20rem;
        height: auto;
      }
    }
  }
}

.related-identifier-type,
.related-item-type
{
  margin-bottom: $space-md;
}

.related-identifier-list,
.related-item-list
{
  list-style-type: none;
  margin: 0 0 $space-sm 0;

  &>li {
    word-wrap: anywhere;
    overflow-wrap: anywhere;
  }
}

